FIX: Carousel Aside top-list layout bugs

--- a/src/resources/css/index.css
+++ b/src/resources/css/index.css
@@ -42,9 +42,6 @@ body {
 
 /* right-side top trending popular lists */
 #top-list {
-  position: fixed;
-  top: 0px; right: 0px;
   width: 20%; height: 100%;
   overflow-y: scroll;
-  border: 1px solid white;
 }
